Added missing {Object} tag for event parameters

--- a/actindo-date-picker.html
+++ b/actindo-date-picker.html
@@ -274,7 +274,7 @@
             /**
              * Mouse "Up" event - Handle correct behavior to close calendar
              *
-             * @param event
+             * @param {Object} event
              *
              * @private
              */
@@ -300,7 +300,7 @@
             /**
              * Mouse "Down" event - Handle correct behavior to close calendar
              *
-             * @param event
+             * @param {Object} event
              *
              * @private
              */
