--- a/actindo-date-picker.html
+++ b/actindo-date-picker.html
@@ -46,7 +46,7 @@
         </style>
 
         <div class = "container">
-            <paper-input label = "[[label]]" value = "{{value}}" type = "[[_dateInputType]]" invalid = "[[invalid]]" error-message = "[[errorMessage]]">
+            <paper-input label = "[[label]]" value = "{{value}}" type = "[[_dateInputType]]" invalid = "[[invalid]]" error-message = "[[_errorMessage]]" required = "[[required]]" disabled = "[[disabled]]">
                 <paper-icon-button icon = "date-range" slot = "prefix" on-click = "_openCloseCalender"></paper-icon-button>
                 <div slot = "prefix"></div>
             </paper-input>
@@ -179,6 +179,9 @@
                         type : Date,
                     },
 
+                    /**
+                     *  Validation result
+                     */
                     invalid:
                     {
                         type   : Boolean,
@@ -186,10 +189,34 @@
                         notify : true
                     },
 
-                    errorMessage:
+                    /**
+                     * Error message in case of invalid input
+                     *
+                     * @private
+                     */
+                    _errorMessage:
                     {
                         type : String,
+                    },
+
+                    /**
+                     * Required property - passed on to underlying paper input
+                     */
+                    required:
+                    {
+                        type  : Boolean,
+                        value : false
+                    },
+
+                    /**
+                     * Disabled property - passed on to underlying paper input
+                     */
+                    disabled:
+                    {
+                        type  : Boolean,
+                        value : false
                     }
+
                 };
             }
 
@@ -206,7 +233,7 @@
                 {
                     if( (this._minDate && date.toDate() < this._minDate) || ( this._maxDate && date.toDate() > this._maxDate ) )
                     {
-                        this.set( "errorMessage", "Date out of range" );
+                        this.set( "_errorMessage", "Date out of range" );
                         invalid = true;
                     }
                     else
@@ -216,7 +243,7 @@
                 }
                 else
                 {
-                    this.set( "errorMessage", "Date invalid" );
+                    this.set( "_errorMessage", "Date invalid" );
                 }
                 this.set( "invalid", invalid );
 
