ERP-1523 Fixed but where validate returned the inverse

--- a/actindo-date-picker.html
+++ b/actindo-date-picker.html
@@ -275,7 +275,7 @@
                 }
                 this.set("invalid", invalid);
 
-                return this.invalid;
+                return !this.invalid;
             }
 
             /**
