--- a/actindo-date-picker.html
+++ b/actindo-date-picker.html
@@ -295,7 +295,7 @@
             }
 
             _isValidDate(date) {
-                return date && date.getTime && !isNaN(date.getTime());
+                return date && date.getTime() && !isNaN(date.getTime());
             }
 
 
