ERP-1535 wrong use of typeof for validation

--- a/actindo-date-picker.html
+++ b/actindo-date-picker.html
@@ -272,7 +272,7 @@
                 if (me.allowEmpty &&
                     (
                         !me.value ||
-                        (me.value.typeOf() === 'string' && me.value.length === 0)
+                        (typeof value === 'string' && me.value.length === 0)
                     )
                 ) {
                     return true;
