--- a/actindo-date-picker.html
+++ b/actindo-date-picker.html
@@ -123,7 +123,7 @@
                     locale:
                         {
                             type: String,
-                            value: moment.locale(),
+                            computed: '_getLocale()'
                         },
 
                     /**
@@ -304,6 +304,13 @@
                 return date && (date.getTime()|| date.getTime() === 0) && !isNaN(date.getTime());
             }
 
+            /**
+             * Return locale
+             */
+            _getLocale()
+            {
+                return moment.locale();
+            }
 
             /**
              * Converts given min date to date object used by date picker
