--- a/actindo-date-picker.html
+++ b/actindo-date-picker.html
@@ -30,7 +30,7 @@
 
             #dialog {
                 z-index: 1;
-                position: absolute;
+                position: fixed;
                 background-color: white;
             }
 
